--- a/frontend/mint_token/package.json
+++ b/frontend/mint_token/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.0"
+    "next": "15.3.0",
+    "ethers": "^6.8.1",
+    "wagmi": "^1.4.12",
+    "viem": "^1.21.4",
+    "connectkit": "^1.6.0"
   },
   "devDependencies": {
     "typescript": "^5",
